[project]
name = 'lacosmic'
description = 'Laplacian Cosmic Ray Identification'
readme = 'README.rst'
license = {file = 'LICENSE.rst'}
authors = [
    {name = 'Larry Bradley', email = 'larry.bradley@gmail.com'},
]
keywords = [
    'astronomy',
    'astrophysics',
    'images',
    'cosmic rays',
    'cosmic-ray removal',
    'filtering',
]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Astronomy',
]
dynamic = ['version']
requires-python = '>=3.9'
dependencies = [
    'numpy>=1.22',
    'astropy>=5.0',
    'scipy>=1.7.2',
]

[project.urls]
Homepage = 'https://github.com/larrybradley/lacosmic'
Documentation = 'https://lacosmic.readthedocs.io/en/stable/'

[project.optional-dependencies]
all = [
    'matplotlib>=3.5',
]
test = [
    'pytest-astropy>=0.11',
]
docs = [
    'lacosmic[all]',
    'sphinx',
    'sphinx-astropy>=1.9',
    'tomli; python_version < "3.11"',
]

[build-system]
requires = [
    'setuptools>=61.2',
    'setuptools_scm>=6.2',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = 'lacosmic/version.py'

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
'lacosmic' = [
    'data/*',
]

[tool.pytest.ini_options]
minversion = 7.0
testpaths = [
    'lacosmic',
    'docs',
]
norecursedirs = [
    'docs/_build',
    'extern',
]
astropy_header = true
doctest_plus = 'enabled'
text_file_format = 'rst'
addopts = [
    '-ra',
    '--color=yes',
    '--doctest-rst',
    '--strict-config',
    '--strict-markers',
]
log_cli_level = 'INFO'
xfail_strict = true
remote_data_strict = true
filterwarnings = [
    'error',  # turn warnings into exceptions
    'ignore:numpy.ufunc size changed:RuntimeWarning',
    'ignore:numpy.ndarray size changed:RuntimeWarning',
]

[tool.coverage.run]
omit = [
    'lacosmic/_astropy_init*',
    'lacosmic/conftest.py',
    'lacosmic/*setup_package*',
    'lacosmic/tests/*',
    'lacosmic/*/tests/*',
    'lacosmic/extern/*',
    'lacosmic/version*',
    '*/lacosmic/_astropy_init*',
    '*/lacosmic/conftest.py',
    '*/lacosmic/*setup_package*',
    '*/lacosmic/tests/*',
    '*/lacosmic/*/tests/*',
    '*/lacosmic/extern/*',
    '*/lacosmic/version*',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'except ImportError',
    'raise AssertionError',
    'raise NotImplementedError',
    'def main\\(.*\\):',
    'pragma: py{ignore_python_version}',
    'def _ipython_key_completions_',
]

[tool.repo-review]
ignore = [
    'MY',  # ignore MyPy
    'RF',  # ignore Ruff
    'PC110',  # ignore using black or ruff-format in pre-commit
    'PC111',  # ignore using blacken-docs in pre-commit
    'PC140',  # ignore using mypy in pre-commit
    'PC180',  # ignore using prettier in pre-commit
    'PC190',  # ignore using Ruff in pre-commit
    'PC191',  # ignore showing Ruff fixes in pre-commit
    'PC901',  # ignore using custom pre-commit update message
    'PY005',  # ignore having a tests/ folder
]

[tool.isort]
skip_glob = [
    'lacosmic/*__init__.py*',
]
known_first_party = [
    'lacosmic',
    'extension_helpers',
]
use_parentheses = true

[tool.black]
force-exclude = """
(
  .*
)
"""

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.numpydoc_validation]
checks = [
    'all',   # report on all checks, except the below
    'ES01',  # missing extended summary
    'EX01',  # missing "Examples"
    'SA01',  # missing "See Also"
    'SA04',  # missing "See Also" description
    'RT02',  # only type in "Returns" section (no name)
    'SS06',  # single-line summary
    'RT01',  # do not require return type for lazy properties
]

# don't report on objects that match any of these regex;
# remember to use single quotes for regex in TOML
exclude = [
    '__init__',
    '\._.*',  # private functions/methods
    '^test_*',  # test code
    '^conftest.*$',  # pytest configuration
]

[tool.docformatter]
    wrap-summaries = 72
    pre-summary-newline = true
    make-summary-multi-line = true
