[project]
name = 'lacosmic'
description = 'Laplacian Cosmic Ray Identification'
readme = 'README.rst'
license = 'BSD-3-Clause'
license-files = ['LICENSE.rst']
authors = [
    {name = 'Larry Bradley', email = 'larry.bradley@gmail.com'},
]
keywords = [
    'astronomy',
    'astrophysics',
    'images',
    'cosmic rays',
    'cosmic-ray removal',
    'filtering',
]
classifiers = [
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Astronomy',
]
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
    'numpy >= 2.0',
    'astropy >= 6.1',
    'scipy >= 1.13',
]

[project.urls]
Homepage = 'https://github.com/larrybradley/lacosmic'
Documentation = 'https://lacosmic.readthedocs.io/en/stable/'

[project.optional-dependencies]
test = [
    'pytest-astropy >= 0.11',
    'tox >= 4.24',
]
docs = [
    'lacosmic',
    'sphinx >= 8.2',  # keep in sync with docs/conf.py
    'pydata-sphinx-theme >= 0.16',
    'sphinx-automodapi >= 0.18',
    'sphinx-copybutton >= 0.5',
    'numpydoc >= 1.8',
    'matplotlib >= 3.9',
    'pytest-doctestplus >= 1.0',
    'sphinx-astropy[confv2] >= 1.9.1',
]
dev = [
    'lacosmic[docs,test]',
    'pre-commit >= 4.0',
]

[build-system]
requires = [
    'setuptools >= 77.0',
    'setuptools_scm >= 8.1',
    'numpy >= 2.0',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = 'lacosmic/version.py'

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
'lacosmic' = [
    'data/*',
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    'lacosmic',
    'docs',
]
norecursedirs = [
    'docs/_build',
    'extern',
]
astropy_header = true
doctest_plus = 'enabled'
text_file_format = 'rst'
addopts = [
    '-ra',
    '--color=yes',
    '--doctest-rst',
    '--strict-config',
    '--strict-markers',
]
log_level = 'INFO'
log_cli_level = 'INFO'
xfail_strict = true
remote_data_strict = true
filterwarnings = [
    'error',  # turn warnings into exceptions
]

[tool.coverage.run]
omit = [
    'lacosmic/_astropy_init*',
    'lacosmic/conftest.py',
    'lacosmic/*setup_package*',
    'lacosmic/tests/*',
    'lacosmic/*/tests/*',
    'lacosmic/extern/*',
    'lacosmic/version*',
    '*/lacosmic/_astropy_init*',
    '*/lacosmic/conftest.py',
    '*/lacosmic/*setup_package*',
    '*/lacosmic/tests/*',
    '*/lacosmic/*/tests/*',
    '*/lacosmic/extern/*',
    '*/lacosmic/version*',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'except ImportError',
    'raise AssertionError',
    'raise NotImplementedError',
    'def main\\(.*\\):',
    'pragma: py{ignore_python_version}',
    'def _ipython_key_completions_',
]

[tool.isort]
skip_glob = [
    'lacosmic/*__init__.py*',
]
known_first_party = [
    'lacosmic',
]
use_parentheses = true

[tool.black]
force-exclude = """
(
  .*
)
"""

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.repo-review]
ignore = [
    'MY',  # ignore MyPy
    'PC110',  # ignore using black or ruff-format in pre-commit
    'PC111',  # ignore using blacken-docs in pre-commit
    'PC140',  # ignore using mypy in pre-commit
    'PC180',  # ignore using prettier in pre-commit
    'PC901',  # ignore using custom pre-commit update message
    'PC902',  # ignore custom pre-commit CI autofix message
    'PP006',  # ignore missing dependency-groups in pyproject.toml
    'PY005',  # ignore having a tests/ folder
]

[tool.docformatter]
    wrap-summaries = 72
    pre-summary-newline = true
    make-summary-multi-line = true

[tool.numpydoc_validation]
checks = [
    'all',   # report on all checks, except the below
    'ES01',  # missing extended summary
    'EX01',  # missing "Examples"
    'SA01',  # missing "See Also"
    'SA04',  # missing "See Also" description
    'RT02',  # only type in "Returns" section (no name)
    'SS06',  # single-line summary
    'RT01',  # do not require return type for lazy properties
]

# don't report on objects that match any of these regex;
# remember to use single quotes for regex in TOML
exclude = [
    '__init__',
    '\._.*',  # private functions/methods
    '^test_*',  # test code
    '^conftest.*$',  # pytest configuration
]

[tool.ruff]
line-length = 79

[tool.ruff.lint.pylint]
max-statements = 130

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'ANN',  # type annotations
    'D200',  # unnecessary-multiline-docstring
    'D205',  # missing-blank-line-after-summary
    'FBT002',  # boolean-default-value-positional-argument
    'PLC0415',  # import-outside-top-level
    'PLR0913',  # too-many-arguments
    'PTH',  # Pathlib usage
]

[tool.ruff.lint.per-file-ignores]
# undocumented-public-package, isort, unused-noqa
'__init__.py' = ['D104', 'I', 'RUF100']
'conftest.py' = ['D103', 'I001']  # undocumented-public-function, isort
# commented-out-code, implicit-namespace-package, error-instead-of-exception
'docs/conf.py' = ['ERA001', 'INP001', 'TRY400']
'test_*.py' = ['D']  # pydocstyle

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
