[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
norecursedirs = "docs[\/]_build" "photutils[\/]extern"
doctest_plus = enabled
addopts = --pyargs -p no:warnings

[ah_bootstrap]
auto_use = True

[metadata]
package_name = lacosmic
description = lacosmic
long_description = lacosmic
author = Larry Bradley
author_email = larry.bradley@gmail.com
url = https://github.com/larrybradley/lacosmic
edit_on_github = False
github_project = larrybradley/lacosmic
version = 0.2.dev

[entry_points]
