[metadata]
name = lacosmic
author = Larry Bradley
author_email = larry.bradley@gmail.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/larrybradley/lacosmic
github_project = larrybradley/lacosmic
edit_on_github = False
description = Laplacian Cosmic Ray Identification
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, astrophysics, images, cosmic rays
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    astropy >= 4.1
    numpy >= 1.18
    scipy >= 1.6.0

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
lacosmic = data/*

[tool:pytest]
testpaths = "lacosmic" "docs"
norecursedirs = "docs[\/]_build" "docs[\/]generated" "lacosmic[\/]extern"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
filterwarnings =
    ignore:numpy.ufunc size changed:RuntimeWarning

[coverage:run]
omit =
    lacosmic/_astropy_init*
    lacosmic/conftest.py
    lacosmic/*setup_package*
    lacosmic/tests/*
    lacosmic/*/tests/*
    lacosmic/extern/*
    lacosmic/version*
    */lacosmic/_astropy_init*
    */lacosmic/conftest.py
    */lacosmic/*setup_package*
    */lacosmic/tests/*
    */lacosmic/*/tests/*
    */lacosmic/extern/*
    */lacosmic/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
